ensure spacing for about me

--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -34,7 +34,7 @@
     height: 25vh;
     align-items: center;
     justify-content: center;
-    flex-grow: 3;
+    flex-grow: 1;
 }
 
 .textContainer{
@@ -57,14 +57,17 @@
     margin-left: 1rem;
 
 }
+.myFace{
+    height: 10vh;
+}
 }
 
 @media (min-width: 1180px) {
+    .myFace{
+        margin-left: 15vw;
+    }
     .text{
         margin-right: 20vw;
     }
-    .myFace{
-        margin-left: 15vw;
-        height: 10vh;
-    }
+
 }
